--- a/RunIt/requirements.txt
+++ b/RunIt/requirements.txt
@@ -5,9 +5,8 @@ cffi==1.14.6
 chardet==3.0.4
 click==7.1.2
 dnspython==2.0.0
-fastapi==0.63.0
+fastapi==0.70.0
 future==0.18.2
-futures==3.1.1
 h11==0.9.0
 h2==3.2.0
 hpack==3.0.0
@@ -21,7 +20,7 @@ loguru==0.5.1
 motor==2.2.0
 pycares==4.0.0
 pycparser==2.20
-pydantic==1.6.1
+pydantic==1.8.2
 PyJWT==2.1.0
 pymongo==3.11.0
 PyYAML==6.0
@@ -31,7 +30,8 @@ requests==2.24.0
 rfc3986==1.5.0
 six==1.16.0
 sniffio==1.2.0
-starlette==0.13.6
+starlette==0.16.0
+typing-extensions==4.0.0
 urllib3==1.25.10
 uvicorn==0.11.8
 uvloop==0.14.0
