update config for db and redis

--- a/RunIt/app/config.yaml
+++ b/RunIt/app/config.yaml
@@ -1,12 +1,13 @@
 MONGO:
-  ADDRESS: '192.168.48.3'
-  PORT: 27077
-  USERNAME: 'root'
-  PASSWORD: '123456'
+  ADDRESS: '127.0.0.1'
+  PORT: 27017
+#  USERNAME: 'root'
+#  PASSWORD: '123456'
 
 REDIS:
-  HOST: '192.168.48.2'
-  PORT: 6399
+  HOST: '127.0.0.1'
+  PORT: 6379
+  PASSWORD: runit@redis
 
 AUTH:
   IDENTITY:
