--- a/RunIt/airtcore/requirements.txt
+++ b/RunIt/airtcore/requirements.txt
@@ -8,6 +8,7 @@ blue==0.7.0
 cached-property==1.5.2
 certifi==2021.10.8
 cffi==1.15.0
+chainer==7.8.0
 chardet==3.0.4
 charset-normalizer==2.0.8
 click==8.0.3
@@ -27,6 +28,7 @@ dockerpty==0.4.1
 docopt==0.6.2
 easyocr==1.4.1
 facebook-wda==1.4.3
+filelock==3.4.0
 flake8==3.8.4
 flatbuffers==2.0
 fonttools==4.28.2
@@ -83,16 +85,20 @@ PyDispatcher==2.0.5
 pyflakes==2.2.0
 PyGithub==1.55
 PyJWT==2.3.0
+pymongo==3.12.1
 PyNaCl==1.4.0
 pyOpenSSL==21.0.0
+pypandoc==1.6.4
 pyparsing==3.0.6
 python-bidi==0.4.2
 python-dateutil==2.8.2
 python-gitlab==1.15.0
 python-xlib==0.31
+pytz==2021.3
 PyWavelets==1.2.0
 pywinauto==0.6.3
 PyYAML==3.13
+pyzmq==22.3.0
 queuelib==1.6.2
 red==0.2.2
 redis==4.0.2
@@ -100,6 +106,7 @@ regex==2021.11.10
 requests==2.20.1
 retry==0.9.2
 rfc3986==1.5.0
+room==0.1.11
 scikit-image==0.18.3
 scipy==1.7.3
 Scrapy==2.5.1
@@ -114,6 +121,7 @@ tifffile==2021.11.2
 tomli==1.2.2
 torch==1.10.0
 torchvision==0.11.1
+tornado==6.1
 Twisted==21.7.0
 typing_extensions==4.0.0
 Unidecode==1.3.2
