update runit core service

--- a/RunIt/airt/config.yaml
+++ b/RunIt/airt/config.yaml
@@ -1,8 +1,11 @@
 REDIS:
-  HOST: '127.0.0.1'
-  PORT: 57878
-#  PORT: 6379
-  PASSWORD: runit@redis
+  LOCAL:
+    HOST: '127.0.0.1'
+    PORT: 6379
+  SERVER:
+    HOST: '120.131.14.155'
+    PORT: 57878
+    PASSWORD: runit@redis
 
 CORP_IMG:
   LOCAL:
@@ -10,6 +13,7 @@ CORP_IMG:
     MID: [[207, 741, 310, 866], [310, 744, 403, 866], [405, 742, 493, 866], [496, 746, 587, 870], [587, 744, 683, 868]]
     TAIL: [[219, 870, 312, 998], [310, 870, 403, 1000], [406, 873, 499, 1000], [499, 870, 588, 1002], [590, 871, 689, 998]]
     DROP: [[73, 833, 136, 917], [138, 835, 197, 915], [76, 917, 133, 997], [136, 917, 194, 997]]
+    HAND: [[216, 1011, 310, 1132], [309, 1014, 403, 1133], [403, 1013, 496, 1133]]
   PLAYER1:
     P3:
       HEAD: [[31, 138, 98, 219], [96, 140, 152, 219], [153, 138, 215, 219]]
@@ -17,12 +21,14 @@ CORP_IMG:
       TAIL: [[38, 300, 95, 382], [96, 300, 152, 381], [153, 300, 212, 379], [211, 300, 270, 381], [2269, 303, 329, 381]]
 #      DROP: [[140, 390, 189, 458], [186, 392, 234, 456], [234, 390, 279, 456], [279, 390, 329, 456]]
       DROP: []
+      HAND: []
     P2:
       HEAD: [[219, 136, 277, 218], [277, 139, 334, 219], [332, 138, 398, 219]]
       MID: [[219, 218, 279, 299], [277, 221, 336, 301], [336, 219, 394, 299], [392, 218, 450, 299], [452, 221, 516, 303]]
       TAIL: [[216, 298, 277, 381], [279, 301, 336, 383], [334, 303, 392, 376], [394, 299, 450, 380], [450, 303, 512, 381]]
 #      DROP: [[320, 389, 367, 457], [367, 391, 414, 457], [416, 391, 460, 455], [460, 392, 508, 457]]
       DROP: []
+      HAND: []
   PLAYER2:
     P3:
       HEAD: [[593, 138, 653, 219], [653, 140, 709, 219], [709, 141, 768, 219]]
@@ -30,11 +36,13 @@ CORP_IMG:
       TAIL: [[479, 302, 536, 382], [536, 302, 596, 382], [595, 300, 653, 381], [652, 300, 709, 382], [710, 302, 769, 381]]
 #      DROP: [[477, 390, 525, 457], [525, 390, 571, 456], [571, 394, 619, 460], [618, 394, 665, 456]]
       DROP: []
+      HAND: []
     P2:
       HEAD: []
       MID: []
       TAIL: []
       DROP: []
+      HAND: []
 
 COLOR:
   RED:
