update runit core service

--- a/RunIt/airt/config.yaml
+++ b/RunIt/airt/config.yaml
@@ -9,11 +9,18 @@ REDIS:
 
 CORP_IMG:
   LOCAL:
-    HEAD: [[217, 614, 311, 740], [309, 612, 403, 740], [400, 614, 500, 740]]
-    MID: [[207, 741, 310, 866], [310, 744, 403, 866], [405, 742, 493, 866], [496, 746, 587, 870], [587, 744, 683, 868]]
-    TAIL: [[219, 870, 312, 998], [310, 870, 403, 1000], [406, 873, 499, 1000], [499, 870, 588, 1002], [590, 871, 689, 998]]
-    DROP: [[73, 833, 136, 917], [138, 835, 197, 915], [76, 917, 133, 997], [136, 917, 194, 997]]
-    HAND: [[216, 1011, 310, 1132], [309, 1014, 403, 1133], [403, 1013, 496, 1133]]
+#    HEAD: [[217, 614, 311, 740], [309, 612, 403, 740], [400, 614, 500, 740]]
+#    MID: [[207, 741, 310, 866], [310, 744, 403, 866], [405, 742, 493, 866], [496, 746, 587, 870], [587, 744, 683, 868]]
+#    TAIL: [[219, 870, 312, 998], [310, 870, 403, 1000], [406, 873, 499, 1000], [499, 870, 588, 1002], [590, 871, 689, 998]]
+#    DROP: [[73, 833, 136, 917], [138, 835, 197, 915], [76, 917, 133, 997], [136, 917, 194, 997]]
+#    HAND: [[216, 1011, 310, 1132], [309, 1014, 403, 1133], [403, 1013, 496, 1133]]
+
+    HEAD: [ [ 442, 230, 535, 360 ], [ 533, 235, 627, 362 ], [ 625, 238, 720, 359 ] ]
+    MID: [ [ 444, 358, 535, 486 ], [ 533, 360, 627, 488 ], [ 627, 366, 717, 491 ], [ 716, 363, 809, 488 ], [ 806, 365, 900, 490 ] ]
+    TAIL: [ [ 445, 491, 530, 612 ], [ 530, 493, 624, 611 ], [ 624, 496, 714, 612 ], [ 714, 494, 808, 612 ], [ 809, 494, 900, 612 ] ]
+    DROP: [ [ 297, 455, 356, 535 ], [ 358, 457, 414, 536 ], [ 302, 537, 356, 615 ], [ 358, 537, 412, 616 ] ]
+    HAND: [ [ 441, 628, 530, 747 ], [ 532, 629, 624, 747 ], [ 624, 631, 714, 746 ] ]
+
   PLAYER1:
     P3:
       HEAD: [[31, 138, 98, 219], [96, 140, 152, 219], [153, 138, 215, 219]]
@@ -23,12 +30,20 @@ CORP_IMG:
       DROP: []
       HAND: []
     P2:
-      HEAD: [[219, 136, 277, 218], [277, 139, 334, 219], [332, 138, 398, 219]]
-      MID: [[219, 218, 279, 299], [277, 221, 336, 301], [336, 219, 394, 299], [392, 218, 450, 299], [452, 221, 516, 303]]
-      TAIL: [[216, 298, 277, 381], [279, 301, 336, 383], [334, 303, 392, 376], [394, 299, 450, 380], [450, 303, 512, 381]]
-#      DROP: [[320, 389, 367, 457], [367, 391, 414, 457], [416, 391, 460, 455], [460, 392, 508, 457]]
-      DROP: []
-      HAND: []
+#      HEAD: [[219, 136, 277, 218], [277, 139, 334, 219], [332, 138, 398, 219]]
+#      MID: [[219, 218, 279, 299], [277, 221, 336, 301], [336, 219, 394, 299], [392, 218, 450, 299], [452, 221, 516, 303]]
+#      TAIL: [[216, 298, 277, 381], [279, 301, 336, 383], [334, 303, 392, 376], [394, 299, 450, 380], [450, 303, 512, 381]]
+##      DROP: [[320, 389, 367, 457], [367, 391, 414, 457], [416, 391, 460, 455], [460, 392, 508, 457]]
+#      DROP: []
+#      HAND: []
+
+      HEAD: [ [ 205, 66, 263, 143 ], [ 264, 66, 319, 143 ], [ 323, 66, 378, 143 ] ]
+      MID: [ [ 92, 145, 146, 225 ], [ 148, 145, 204, 225 ], [ 205, 145, 261, 225 ], [ 264, 145, 319, 225 ], [ 320, 145, 378, 225 ] ]
+      TAIL: [ [ 92, 225, 146, 306 ], [ 148, 225, 204, 306 ], [ 205, 225, 261, 306 ], [ 264, 225, 319, 306 ], [ 320, 225, 278, 306 ] ]
+      #      DROP: [[320, 389, 367, 457], [367, 391, 414, 457], [416, 391, 460, 455], [460, 392, 508, 457]]
+      DROP: [ ]
+      HAND: [ ]
+
   PLAYER2:
     P3:
       HEAD: [[593, 138, 653, 219], [653, 140, 709, 219], [709, 141, 768, 219]]
