--- a/RunIt/airt/requirements.txt
+++ b/RunIt/airt/requirements.txt
@@ -1,6 +1,7 @@
 airtest==1.2.3
 anyio==3.4.0
 appdirs==1.4.4
+asgiref==3.4.1
 attrs==21.2.0
 Automat==20.2.0
 black==21.7b0
@@ -28,6 +29,7 @@ dockerpty==0.4.1
 docopt==0.6.2
 easyocr==1.4.1
 facebook-wda==1.4.3
+fastapi==0.70.0
 filelock==3.4.0
 flake8==3.8.4
 flatbuffers==2.0
@@ -81,6 +83,7 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycodestyle==2.6.0
 pycparser==2.21
+pydantic==1.8.2
 PyDispatcher==2.0.5
 pyflakes==2.2.0
 PyGithub==1.55
@@ -90,6 +93,7 @@ PyNaCl==1.4.0
 pyOpenSSL==21.0.0
 pypandoc==1.6.4
 pyparsing==3.0.6
+pytesseract==0.3.8
 python-bidi==0.4.2
 python-dateutil==2.8.2
 python-gitlab==1.15.0
@@ -115,6 +119,7 @@ setuptools-scm==6.3.2
 six==1.16.0
 smmap==5.0.0
 sniffio==1.2.0
+starlette==0.16.0
 svn==1.0.1
 texttable==0.9.1
 tifffile==2021.11.2
@@ -126,6 +131,7 @@ Twisted==21.7.0
 typing_extensions==4.0.0
 Unidecode==1.3.2
 urllib3==1.24.3
+uvicorn==0.16.0
 uvloop==0.16.0
 w3lib==1.22.0
 websocket-client==0.48.0
