--- a/RunIt/airt/config.yaml
+++ b/RunIt/airt/config.yaml
@@ -8,56 +8,91 @@ REDIS:
     PASSWORD: runit@redis
 
 CORP_IMG:
-  LOCAL:
-#    HEAD: [[217, 614, 311, 740], [309, 612, 403, 740], [400, 614, 500, 740]]
-#    MID: [[207, 741, 310, 866], [310, 744, 403, 866], [405, 742, 493, 866], [496, 746, 587, 870], [587, 744, 683, 868]]
-#    TAIL: [[219, 870, 312, 998], [310, 870, 403, 1000], [406, 873, 499, 1000], [499, 870, 588, 1002], [590, 871, 689, 998]]
-#    DROP: [[73, 833, 136, 917], [138, 835, 197, 915], [76, 917, 133, 997], [136, 917, 194, 997]]
-#    HAND: [[216, 1011, 310, 1132], [309, 1014, 403, 1133], [403, 1013, 496, 1133]]
+  # 横屏模式
+  HP:
+    LOCAL:
+      HEAD: [ [ 0.349, 0.296, 0.411, 0.439 ], [ 0.422, 0.296, 0.486, 0.439 ], [ 0.494, 0.296, 0.556, 0.439 ] ]
+      MID: [ [ 0.349, 0.455, 0.411, 0.601 ], [ 0.422, 0.455, 0.486, 0.601 ], [ 0.494, 0.455, 0.556, 0.601 ], [ 0.565, 0.455, 0.628, 0.601 ], [ 0.638, 0.455, 0.701, 0.601 ] ]
+      TAIL: [ [ 0.349, 0.618, 0.411, 0.765 ], [ 0.422, 0.618, 0.486, 0.765 ], [ 0.494, 0.618, 0.556, 0.765 ], [ 0.565, 0.618, 0.628, 0.765 ], [ 0.638, 0.618, 0.701, 0.765 ] ]
+      DROP: [ [ 0.236, 0.568, 0.275, 0.659 ], [ 0.282, 0.568, 0.321, 0.659 ], [ 0.236, 0.669, 0.275, 0.761 ], [ 0.282, 0.669, 0.321, 0.761 ] ]
+      HAND: [ [ 0.349, 0.786, 0.411, 0.919 ], [ 0.422, 0.786, 0.486, 0.919 ], [ 0.494, 0.786, 0.556, 0.919 ] ]
 
-    HEAD: [ [ 450, 235, 530, 350 ], [ 540, 235, 620, 350 ], [ 635, 235, 710, 350 ] ]
-    MID: [ [ 450, 365, 530, 480 ], [ 540, 365, 620, 480 ], [ 635, 365, 710, 480 ], [ 725, 365, 805, 480 ], [ 815, 365, 895, 480 ] ]
-    TAIL: [ [ 448, 495, 530, 610 ], [ 540, 495, 620, 610 ], [ 635, 495, 710, 610 ], [ 725, 495, 805, 610 ], [ 815, 495, 895, 610 ] ]
-    DROP: [ [ 304, 455, 350, 526 ], [ 360, 455, 410, 526 ], [ 304, 536, 350, 608 ], [ 360, 536, 410, 608 ] ]
-    HAND: [ [ 450, 630, 520, 735 ], [ 540, 630, 610, 735 ], [ 630, 630, 704, 735 ] ]
+    PLAYER1:
+      # 双人游戏 two-player game(TPG)
+      TPG:
+        HEAD: [[0.165, 0.084, 0.204, 0.176], [0.211, 0.084, 0.249, 0.176], [0.255, 0.084, 0.294, 0.176]]
+        MID: [[0.074, 0.188, 0.112, 0.278], [0.119, 0.188, 0.158, 0.278], [0.165, 0.188, 0.204, 0.278], [0.211, 0.188, 0.249, 0.278], [0.255, 0.188, 0.294, 0.278]]
+        TAIL: [[0.074, 0.288, 0.112, 0.379], [0.119, 0.288, 0.158, 0.379], [0.165, 0.288, 0.204, 0.379 ], [0.211, 0.288, 0.249, 0.379], [0.255, 0.288, 0.294, 0.379]]
+        DROP: []
+        HAND: []
 
-  PLAYER1:
-    P3:
-      HEAD: [[31, 138, 98, 219], [96, 140, 152, 219], [153, 138, 215, 219]]
-      MID: [[36, 219, 96, 302], [95, 220, 153, 302], [152, 219, 212, 299], [212, 221, 269, 300], [269, 220, 329 ,300]]
-      TAIL: [[38, 300, 95, 382], [96, 300, 152, 381], [153, 300, 212, 379], [211, 300, 270, 381], [2269, 303, 329, 381]]
-#      DROP: [[140, 390, 189, 458], [186, 392, 234, 456], [234, 390, 279, 456], [279, 390, 329, 456]]
-      DROP: []
-      HAND: []
-    P2:
-#      HEAD: [[219, 136, 277, 218], [277, 139, 334, 219], [332, 138, 398, 219]]
-#      MID: [[219, 218, 279, 299], [277, 221, 336, 301], [336, 219, 394, 299], [392, 218, 450, 299], [452, 221, 516, 303]]
-#      TAIL: [[216, 298, 277, 381], [279, 301, 336, 383], [334, 303, 392, 376], [394, 299, 450, 380], [450, 303, 512, 381]]
-##      DROP: [[320, 389, 367, 457], [367, 391, 414, 457], [416, 391, 460, 455], [460, 392, 508, 457]]
-#      DROP: []
-#      HAND: []
+      # 三/多人游戏 multiple-player game(MPG)
+      MPG:
+        HEAD: [ [ 0.165, 0.084, 0.204, 0.176 ], [ 0.211, 0.084, 0.249, 0.176 ], [ 0.255, 0.084, 0.294, 0.176 ] ]
+        MID: [ [ 0.074, 0.188, 0.112, 0.278 ], [ 0.119, 0.188, 0.158, 0.278 ], [ 0.165, 0.188, 0.204, 0.278 ], [ 0.211, 0.188, 0.249, 0.278 ], [ 0.255, 0.188, 0.294, 0.278 ] ]
+        TAIL: [ [ 0.074, 0.288, 0.112, 0.379 ], [ 0.119, 0.288, 0.158, 0.379 ], [ 0.165, 0.288, 0.204, 0.379 ], [ 0.211, 0.288, 0.249, 0.379 ], [ 0.255, 0.288, 0.294, 0.379 ] ]
+        DROP: [ ]
+        HAND: [ ]
 
-      HEAD: [ [ 212, 70, 260, 140 ], [ 270, 70, 318, 140 ], [ 326, 70, 376, 140 ] ]
-      MID: [ [ 96, 152, 145, 222 ], [ 156, 152, 202, 222 ], [ 212, 152, 258, 222 ], [ 270, 152, 316, 222 ], [ 326, 152, 376, 222 ] ]
-      TAIL: [ [ 96, 232, 144, 302 ], [ 156, 232, 202, 302 ], [ 214, 232, 258, 302 ], [ 270, 232, 316, 302 ], [ 326, 232, 376, 302 ] ]
-      #      DROP: [[320, 389, 367, 457], [367, 391, 414, 457], [416, 391, 460, 455], [460, 392, 508, 457]]
-      DROP: [ ]
-      HAND: [ ]
+    PLAYER2:
+      # 双人游戏 two-player game(TPG)
+      TPG:
+        HEAD: []
+        MID: []
+        TAIL: []
+        DROP: []
+        HAND: []
 
-  PLAYER2:
-    P3:
-      HEAD: [[593, 138, 653, 219], [653, 140, 709, 219], [709, 141, 768, 219]]
-      MID: [[477, 219, 536, 302], [536, 220, 595, 300], [595, 221, 652, 300], [652, 221, 709, 300], [710, 221, 769, 300]]
-      TAIL: [[479, 302, 536, 382], [536, 302, 596, 382], [595, 300, 653, 381], [652, 300, 709, 382], [710, 302, 769, 381]]
-#      DROP: [[477, 390, 525, 457], [525, 390, 571, 456], [571, 394, 619, 460], [618, 394, 665, 456]]
-      DROP: []
-      HAND: []
-    P2:
-      HEAD: []
-      MID: []
-      TAIL: []
-      DROP: []
-      HAND: []
+      # 三/多人游戏 multiple-player game(MPG)
+      MPG:
+        HEAD: [ [ 0.719, 0.088, 0.757, 0.177 ], [ 0.765, 0.088, 0.802, 0.177 ], [ 0.808, 0.088, 0.848, 0.177 ] ]
+        MID: [ [ 0.719, 0.188, 0.757, 0.278 ], [ 0.765, 0.188, 0.802, 0.278 ], [ 0.808, 0.188, 0.848, 0.278 ], [ 0.852, 0.188, 0.892, 0.278 ], [ 0.898, 0.188, 0.936, 0.278 ] ]
+        TAIL: [ [ 0.719, 0.288, 0.757, 0.382 ], [ 0.765, 0.288, 0.802, 0.382 ], [ 0.808, 0.288, 0.848, 0.382 ], [ 0.852, 0.288, 0.892, 0.382 ], [ 0.898, 0.288, 0.936, 0.382 ] ]
+        DROP: []
+        HAND: []
+
+
+  # 竖屏模式(两个玩家)
+  SP:
+    LOCAL:
+      HEAD: [ [ 0.284, 0.485, 0.383, 0.576 ], [ 0.398, 0.485, 0.499, 0.576 ], [ 0.514, 0.485, 0.614, 0.576 ] ]
+      MID: [ [ 0.284, 0.586, 0.383, 0.676 ], [ 0.398, 0.586, 0.499, 0.676 ], [ 0.514, 0.586, 0.614, 0.676 ], [ 0.628, 0.586, 0.734, 0.676 ], [ 0.747, 0.586, 0.846, 0.676 ] ]
+      TAIL: [ [ 0.284, 0.686, 0.383, 0.776 ], [ 0.398, 0.686, 0.499, 0.776 ], [ 0.514, 0.686, 0.614, 0.776 ], [ 0.628, 0.686, 0.734, 0.776 ], [ 0.747, 0.686, 0.846, 0.776 ] ]
+      DROP: [ [ 0.102, 0.656, 0.165, 0.712 ], [ 0.177, 0.655, 0.237, 0.712 ], [ 0.102, 0.718, 0.165, 0.776 ], [ 0.177, 0.718, 0.237, 0.776] ]
+      HAND: [ [ 0.284, 0.791, 0.378, 0.876 ], [0.398, 0.791, 0.489, 0.876 ], [ 0.511, 0.791, 0.604, 0.876 ] ]
+
+    PLAYER1:
+      # 双人游戏 two-player game(TPG)
+      TPG:
+        HEAD: [ [ 0.284, 0.112, 0.346, 0.168 ], [ 0.356, 0.112, 0.417, 0.168 ], [ 0.427, 0.112, 0.487, 0.168 ] ]
+        MID: [ [ 0.284, 0.177, 0.346, 0.232 ], [ 0.356, 0.177, 0.417, 0.232 ], [ 0.427, 0.177, 0.487, 0.232 ] ], [ 0.499, 0.177, 0.562, 0.232 ], [ 0.572, 0.177, 0.633, 0.232] ]
+        TAIL: [ [ 0.284, 0.239, 0.346, 0.296 ], [ 0.356, 0.239, 0.417, 0.296 ], [ 0.427, 0.239, 0.487, 0.296 ] ], [ 0.499, 0.239, 0.562, 0.296 ], [ 0.572, 0.239, 0.633, 0.296 ] ]
+        DROP: [ ]
+        HAND: [ ]
+      # 三/多人游戏 multiple-player game(MPG)
+      MPG:
+        HEAD: [ [ 0.056, 0.112, 0.119, 0.169 ], [ 0.128, 0.112, 0.191, 0.169 ], [ 0.203, 0.112, 0.262, 0.169] ]
+        MID: [ [ 0.056, 0.177, 0.119, 0.232 ], [ 0.128, 0.177, 0.191, 0.232 ], [ 0.203, 0.177, 0.262, 0.232], [ 0.272, 0.177, 0.334, 0.232 ], [ 0.344, 0.177, 0.405, 0.232 ] ]
+        TAIL: [ [ 0.056, 0.238, 0.119, 0.296 ], [ 0.128, 0.238, 0.191, 0.296 ], [ 0.203, 0.238, 0.262, 0.296 ], [ 0.272, 0.238, 0.334, 0.296 ], [ 0.344, 0.238, 0.405, 0.296 ] ]
+        DROP: [ ]
+        HAND: [ ]
+
+    PLAYER2:
+      # 双人游戏 two-player game(TPG)
+      TPG:
+        HEAD: [ ]
+        MID: [ ]
+        TAIL: [ ]
+        DROP: [ ]
+        HAND: [ ]
+
+      # 三/多人游戏 multiple-player game(MPG)
+      MPG:
+        HEAD: [ [ 0.747, 0.112, 0.814, 0.169 ], [ 0.822, 0.112, 0.882, 0.169 ], [ 0.894, 0.112, 0.957, 0.169 ] ]
+        MID: [ [ 0.604, 0.177, 0.666, 0.233 ], [ 0.676, 0.177, 0.739, 0.233 ], [ 0.747, 0.177, 0.814, 0.233 ], [ 0.822, 0.177, 0.882, 0.233 ], [ 0.894, 0.177, 0.957, 0.233 ] ]
+        TAIL: [ [0.604, 0.239, 0.666, 0.298 ], [ 0.676, 0.239, 0.739, 0.298], [ 0.747, 0.239, 0.814, 0.298], [ 0.822, 0.239, 0.882, 0.298 ], [ 0.894, 0.239, 0.957, 0.298 ] ]
+        DROP: [ ]
+        HAND: [ ]
 
 COLOR:
   RED:
