--- a/RunIt/app/config.yaml
+++ b/RunIt/app/config.yaml
@@ -6,9 +6,8 @@ MONGO:
 
 REDIS:
   HOST: '127.0.0.1'
-#  PORT: 57878
   PORT: 6379
-#  PASSWORD: runit@redis
+  PASSWORD: runit@redis
 
 AUTH:
   IDENTITY:
