fixed porker location

--- a/RunIt/airt/config.yaml
+++ b/RunIt/airt/config.yaml
@@ -65,8 +65,8 @@ CORP_IMG:
       # 双人游戏 two-player game(TPG)
       TPG:
         HEAD: [ [ 0.284, 0.112, 0.346, 0.168 ], [ 0.356, 0.112, 0.417, 0.168 ], [ 0.427, 0.112, 0.487, 0.168 ] ]
-        MID: [ [ 0.284, 0.177, 0.346, 0.232 ], [ 0.356, 0.177, 0.417, 0.232 ], [ 0.427, 0.177, 0.487, 0.232 ] ], [ 0.499, 0.177, 0.562, 0.232 ], [ 0.572, 0.177, 0.633, 0.232] ]
-        TAIL: [ [ 0.284, 0.239, 0.346, 0.296 ], [ 0.356, 0.239, 0.417, 0.296 ], [ 0.427, 0.239, 0.487, 0.296 ] ], [ 0.499, 0.239, 0.562, 0.296 ], [ 0.572, 0.239, 0.633, 0.296 ] ]
+        MID: [ [ 0.284, 0.177, 0.346, 0.232 ], [ 0.356, 0.177, 0.417, 0.232 ], [ 0.427, 0.177, 0.487, 0.232 ], [ 0.499, 0.177, 0.562, 0.232 ], [ 0.572, 0.177, 0.633, 0.232] ]
+        TAIL: [ [ 0.284, 0.239, 0.346, 0.296 ], [ 0.356, 0.239, 0.417, 0.296 ], [ 0.427, 0.239, 0.487, 0.296 ], [ 0.499, 0.239, 0.562, 0.296 ], [ 0.572, 0.239, 0.633, 0.296 ] ]
         DROP: [ ]
         HAND: [ ]
       # 三/多人游戏 multiple-player game(MPG)
